--- a/trunk/rulefilerotate/src/main/resources/config/log4j.properties
+++ b/trunk/rulefilerotate/src/main/resources/config/log4j.properties
@@ -8,10 +8,10 @@ log4j.appender.fileout.Append=false
 log4j.appender.fileout.layout=org.apache.log4j.PatternLayout
 log4j.appender.fileout.layout.conversionPattern=[%-5p] %m%n
 
-log4j.logger.com.umanis.logs.log4j=${loglevel}, fileout
-log4j.additivity.com.umanis.logs.log4j=false
-#log4j.logger.com.umanis.tools.file.CommandLineBuilder=${loglevel}, fileout
-#log4j.additivity.com.umanis.logs.CommandLineBuilder=false
+log4j.logger.org.alb.logs.log4j=${loglevel}, fileout
+log4j.additivity.org.alb.logs.log4j=false
+#log4j.logger.org.alb.tools.file.CommandLineBuilder=${loglevel}, fileout
+#log4j.additivity.org.alb.logs.CommandLineBuilder=false
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
